--- a/style.css
+++ b/style.css
@@ -8,4 +8,14 @@ canvas {
     top: 0;
     left: 0;
     outline: none;
+    z-index: -1;
+}
+
+header {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 72px;
 }
