--- a/style.css
+++ b/style.css
@@ -3,19 +3,14 @@
     margin: 0;
 }
 
+body {
+    background: url('/BG.png');
+}
+
 canvas {
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
     z-index: -1;
-}
-
-header {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 72px;
 }
